# http-hammer

./: Cargo.toml  LICENSE-MIT  README.md  build.rs  flake.nix
.github/workflows/: rust.yml
src/: cli.rs  config.rs  cookie.rs  main.rs
src/config/: eval.rs  format.rs  mod.rs  serde_http.rs
tests/: cli.rs
