[package]
name = "http-hammer"
description = "A simple tool for hammering HTTP endpoints"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = [ "derive" ] }
anyhow = "1"
hyper = { version = "0.14", features = [ "client", "http1", "runtime" ] }
hyper-tls = "0.5"
tokio = { version = "1", features = [ "full" ] }

serde = { version = "1", features = [ "derive" ] }
toml = "0.5"
