[package]
name = "http-hammer"
description = "A simple tool for hammering HTTP endpoints"
version = "0.1.2"
license = "Apache-2.0 OR MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "nativels" ]
rustls = [ "dep:hyper-rustls" ]
nativels = [ "dep:hyper-tls" ]

[dependencies]
clap = { version = "4", features = [ "derive" ] }
anyhow = "1"

hyper = { version = "0.14", features = [ "client", "http1", "runtime" ] }
hyper-tls = { version = "0.5", optional = true }
hyper-rustls = { version = "0.23", optional = true }

tokio = { version = "1", features = [ "rt-multi-thread", "macros" ], default-features = false }
async-trait = "0.1"
async-recursion = "1"

serde = { version = "1", features = [ "derive" ] }
toml = "0.7"
serde_json = "1"

urlencoding = "2"

[build-dependencies]
clap = { version = "4", features = [ "derive" ] }
clap_complete = "4"

[profile.release]
strip = true
lto = true
